# Babel

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  PROTOCOL.md  README.md  RFC.txt  a.out  conanbuildinfo.cmake  conanfile.txt  main.cpp  test.c
Client/: AppManager.cpp  AppManager.hpp  AudioController.cpp  AudioController.hpp  AudioControllerError.cpp  AudioControllerError.hpp  CMakeLists.txt  Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  Error.cpp  Error.hpp  ISoundFormatReader.cpp  ISoundFormatReader.hpp  InputOptionsHandler.cpp  InputOptionsHandler.hpp  NotificationHandler.cpp  NotificationHandler.hpp  Observer.cpp  Observer.hpp  OggReader.cpp  OggReader.hpp  Packet.hpp  SoundHandler.hpp  SoundManager.cpp  SoundManager.hpp  SoundStream.cpp  SoundStream.hpp  Subject.cpp  Subject.hpp  conanfile.txt  main.cpp
Client/opus/: Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  Opus.hpp
Client/protocol/: ServerCommunication.cpp  ServerCommunication.hpp  ServerHandler.cpp  ServerHandler.hpp  ServerRequest.cpp  ServerRequest.hpp  ServerResponse.cpp  ServerResponse.hpp  SoundServerHandler.cpp  SoundServerHandler.hpp  UserSession.cpp  UserSession.hpp
Client/ui/: AddFriendWidget.cpp  AddFriendWidget.hpp  BabelMainWindow.cpp  BabelMainWindow.hpp  CallWidget.cpp  CallWidget.hpp  FriendListWidget.cpp  FriendListWidget.hpp  LoginWidget.cpp  LoginWidget.hpp  MainWidget.cpp  MainWidget.hpp  MainWindow.cpp  MainWindow.hpp  RegisterWidget.cpp  RegisterWidget.hpp  WidgetsHandler.cpp  WidgetsHandler.hpp
Common/: Database.cpp  Database.hpp  DatabaseError.cpp  DatabaseError.hpp  Message.hpp  Packet.hpp  User.cpp  User.hpp  protocol.h
Documents/: RFC.md  default-server.cfg
Server/: RequestHandler.cpp  RequestHandler.hpp  ServerApplication.cpp  ServerApplication.hpp  ServerConfig.cpp  ServerConfig.hpp  ServerError.cpp  ServerError.hpp  Session.cpp  Session.hpp  SharedData.cpp  SharedData.hpp  main.cpp
Tests/: test.c
